--- a/packages/matrix/package.json
+++ b/packages/matrix/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "matrix",
+  "name": "@matrix/poker",
+  "exports": {
+    ".": "./dist/index.js"
+  },
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npx tsc "
   },
   "keywords": [],
   "author": "",
