--- a/packages/handler/package.json
+++ b/packages/handler/package.json
@@ -7,7 +7,7 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "npx tsc "
+    "build": "npx tsc "
   },
   "keywords": [],
   "author": "",
