--- a/apps/auth_service/package.json
+++ b/apps/auth_service/package.json
@@ -16,12 +16,15 @@
     "@matrix/poker": "^1.0.0",
     "@poker/database": "^1.0.0",
     "bcrypt": "^6.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "typescript": "^5.9.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
+    "@types/cors": "^2.8.19",
     "@types/jsonwebtoken": "^9.0.10",
     "nodemon": "^3.1.11"
   }
