write types packages

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "packageManager": "npm@11.6.2",
   "workspaces": [
     "apps/*",
-    "packages/*"
+    "packages/*",
+    "services/*"
   ]
 }
