--- a/services/generate_and_manage_card/package.json
+++ b/services/generate_and_manage_card/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.14.3",
     "@grpc/proto-loader": "^0.8.0",
+    "@handler/pocker": "^1.0.1",
     "@proto/pocker": "^1.0.0"
   }
 }
