--- a/packages/kafka_instance/package.json
+++ b/packages/kafka_instance/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "@kafka_init/pocker",
+  "name": "@kafka/pocker",
+  "exports": {
+    ".": "./dist/index.js"
+  },
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "build": "npx tsc"
   },
