--- a/services/winner_calculator/package.json
+++ b/services/winner_calculator/package.json
@@ -11,6 +11,11 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@kafka/pocker": "^1.0.0",
+    "@poker/types": "^1.0.0",
+    "dotenv": "^16.0.3",
+    "poker-evaluator": "^2.1.1",
+    "pokersolver": "^2.1.4",
     "typescript": "^5.9.2"
   }
 }
